--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,45 +1,81 @@
-<h1><%= @photo.title %></h1>
-<p><%= @photo.description %></p>
-
-<style>
-  /* Mobile styles */
+<!-- <style>
+  /* General styles */
   .photo-images {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-gap: 10px;
-    align-items: center;
     justify-items: center;
   }
 
-  /* Desktop styles */
-  @media (min-width: 768px) {
+  .photo-item {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background: #f9f9f9;
+    padding: 8px;
+    margin: 10px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+
+  .image-container {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background: #f9f9f9;
+    padding: 5px;
+  }
+
+  .photo-image {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+
+  /* Mobile styles */
+  @media (max-width: 767px) {
     .photo-images {
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-template-columns: 1fr;
     }
   }
 
-  /* Styles to limit the number of images per row to three on desktop */
+  /* Tablet styles */
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .photo-images {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  /* Desktop styles */
   @media (min-width: 1024px) {
     .photo-images {
       grid-template-columns: repeat(3, 1fr);
     }
   }
-</style>
 
-<div class="btn" style="margin-top: 10px; margin-bottom: 20px; text-align: center;">
-  <%= link_to 'Edit', edit_photo_path(@photo), class: 'btn btn-primary' %>
-</div>
+  /* Larger desktop styles */
+  @media (min-width: 1200px) {
+    .photo-images {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+</style> -->
 
-<% if @photo.images.attached? %>
-  <div class="photo-images">
-    <% @photo.images.each_with_index do |image, index| %>
-      <div style="border: 1px solid #ddd; border-radius: 5px; background: #f9f9f9; padding: 5px;">
-        <%= image_tag image, style: 'width: 100%; height: auto; margin-bottom: 10px;' %>
-      </div>
-    <% end %>
+<div class="photo-item">
+  <h1><%= @photo.title %></h1>
+  <p><%= @photo.description %></p>
+
+  <div class="btn" style="margin-top: 10px; margin-bottom: 20px; text-align: center;">
+    <%= link_to 'Edit', edit_photo_path(@photo), class: 'btn btn-primary' %>
   </div>
-<% else %>
-  <p>No images attached to this photo.</p>
-<% end %>
 
-
+  <% if @photo.images.attached? %>
+    <div class="photo-images">
+      <% @photo.images.each_with_index do |image, index| %>
+        <div class="image-container">
+          <%= image_tag image, class: 'photo-image' %>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <p>No images attached to this photo.</p>
+  <% end %>
+</div>
